--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mocha "
   },
   "author": "",
   "license": "",
@@ -13,5 +14,10 @@
     "express": "^4.15.4",
     "npmlog": "^4.1.2",
     "ramda": "^0.24.1"
+  },
+  "devDependencies": {
+    "chai": "^4.1.1",
+    "mocha": "^3.5.0",
+    "mocha-eslint": "^4.1.0"
   }
 }
