--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "identicon",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "start": "node server.js",
     "test": "mocha "
