--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "canvas-prebuilt": "^1.6.5-prerelease.1",
+    "canvas-prebuilt": "^2.0.0-alpha.1",
     "express": "^4.15.4",
     "npmlog": "^4.1.2",
     "ramda": "^0.24.1"
